@@ -22,7 +22,7 @@ use SimpleComplex\Database\MariaDbClient;
  *
  * @code
  * // CLI, in document root:
- * backend/vendor/bin/phpunit --do-not-cache-result backend/vendor/simplecomplex/database/tests/src/MariaDb/ClientTest.php
+backend/vendor/bin/phpunit --do-not-cache-result backend/vendor/simplecomplex/database/tests/src/MariaDb/ClientTest.php
  * @endcode
  *
  * @package SimpleComplex\Tests\Database
