@@ -1,0 +1,6 @@
+
+Execute all MsSql tests.
+
+```bash
+backend/vendor/bin/phpunit --do-not-cache-result backend/vendor/simplecomplex/database/tests/src/MsSql/
+```
